--- a/OsmAnd/build-common.gradle
+++ b/OsmAnd/build-common.gradle
@@ -11,6 +11,7 @@ android {
 		targetSdkVersion 33
 		multiDexEnabled true
 		vectorDrawables.useSupportLibrary = true
+		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 	}
 
 	lintOptions {
@@ -45,7 +46,9 @@ android {
 			res.srcDirs = ["res"]
 			assets.srcDirs = ["assets"]
 		}
-
+		androidTest {
+			java.srcDirs = ["tests"]
+		}
 		legacy {
 			jniLibs.srcDirs = ["libc++"]
 		}
@@ -401,4 +404,15 @@ dependencies {
 	implementation "androidx.car.app:app-projected:1.2.0"
 
 	implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+	implementation "androidx.tracing:tracing:1.1.0"
+	debugImplementation 'androidx.test:monitor:1.6.1'
+	androidTestImplementation "androidx.test:runner:1.5.2"
+	androidTestImplementation "androidx.test:rules:1.5.0"
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+	debugImplementation("androidx.test:core:1.5.0")
+	androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha02'
+	androidTestImplementation ('androidx.test.espresso:espresso-contrib:3.5.1') {
+		exclude module: "protobuf-lite"
+	}
 }
