--- a/OsmAnd/build-common.gradle
+++ b/OsmAnd/build-common.gradle
@@ -372,9 +372,7 @@ dependencies {
 	implementation("com.github.HITGIF:TextFieldBoxes:1.4.5") {
 		exclude group: 'com.android.support'
 	}
-	implementation('com.github.scribejava:scribejava-apis:7.1.1') {
-		exclude group: "com.fasterxml.jackson.core"
-	}
+	implementation('com.github.scribejava:scribejava-apis:7.1.1')
 	implementation 'com.jaredrummler:colorpicker:1.1.0'
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.56'
 	implementation 'com.google.android.play:core:1.9.1'
